# rendit

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: render-template.md
rfcs/: 00-cli-core.md  00-cli.md
src/: app.rs  main.rs
templates/: test.ctx.json  test.html  test.json  test.rendered  test.rendered.html
templates/handlebars/: test.html  test.rendered.html
templates/liquid/: test.ctx.json  test.rendered.html
templates/tera/: ext.html  ext_1.html  macros.html  test.ctx.json  test.html  test.rendered  test.rendered.html  test.rendered.none  test.rendered.tera  test_template.rendered.html
tests/templates/liquid/: test.html  test.rendered.html
tests/templates/tera/: default.ctx.json  ext_2.html  macros.html  test.html  test.html.tera  test.rendered.html  test.rendered.tera  test_template.html  test_template.rendered.html
