[package]
name = "rendit"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A multi-engine CLI tool for rendering templates offline."
repository = "https://github.com/DK26/rendit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
handlebars = "4"
liquid = "0.26"
regex = "1"
clap = { version = "3",  features = ["derive"] }
serde_json = "1"
log = "0.4"
# bat = "0.21"  # Pretty Prints for later
simplelog = "^0.12.0"
anyhow = "1"
# human-panic = "1"
opener = "0.5"

[profile.release]
panic = 'abort'
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size