[package]
name = "rendit"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
version = "0.1.2-alpha"
edition = "2021"
description = "CLI tool for rendering templates with local JSON files as context. Supporting multiple template engines."
repository = "https://github.com/DK26/rendit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
handlebars = "4"
liquid = "0.26"
regex = "1"
clap = "3"
serde_json = "1"
log = "0.4"
# bat = "0.21"  # Pretty Prints for later
simplelog = "^0.12.0"
anyhow = "1"
# human-panic = "1"
opener = "0.5"
enum-iterator = "1"
strum = "0.24"
strum_macros = "0.24"
path-slash = "0.2"

[profile.release]
panic = 'abort'
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size